KUBERNETES/ingress/demo-5/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: myapp:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Never
      nodeSelector:
        kubernetes.io/node-type: worker
